test_suite/tests/ui/transparent/with_into.stderr
error: #[serde(transparent)] is not allowed with #[serde(into = "...")]
 --> tests/ui/transparent/with_into.rs:4:1
  |
4 | / #[serde(transparent, into = "u64")]
5 | | struct S {
6 | |     a: u8,
7 | | }
  | |_^
